<?xml version="1.0"?>
<package>
  <name>hilgendorf_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS-Industrial support for the Hilgendorf project.
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for a robot platform featuring two UR5 arms mounted to a unified base.
    </p>
    </description>

  <author>Jonathan Meyer</author>
  <maintainer email="jonathan.meyer@swri.org">Jonathan Meyer</maintainer>

  <url type="repository">https://github.com/ros-industrial-consortium/hilgendorf</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ur_description</run_depend>
  <run_depend>ur_driver</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>robotiq_c2_model_visualization</run_depend>

</package>
